AM_CPPFLAGS = \
	-Wall -fPIC \
	-I./include 

noinst_LIBRARIES = libsrpp.a


libsrpp_a_SOURCES =\
 src/SRPP_functions.cpp \
 src/Padding_functions.cpp \
 src/Padding_Algorithms.cpp \
 src/srpp_timer.cpp \
 src/md5.cpp  \
 include/SRPP_functions.h \
 include/Padding_functions.h \
 include/Padding_Algorithms.h \
 include/srpp_timer.h \
 include/md5.h  \
 include/CryptoProfile.hpp \
 include/SRPPMessage.hpp \
 include/SRPPSession.hpp \
 include/Signaling_functions.hpp \
 include/sdp_srpp.hpp 
 
 
